[package]
name = "deadlocked"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_ascii_terminal = "0.15.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

